finished updating READ route

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "webpack -d --watch",
     "build:prod": "webpack --config production.config.js",
     "seed": "node ./database/seed.js",
+    "start": "nodemon ./server/index.js --ignore database/ --ignore client/ --ignore test/",
     "test": "jest",
     "test:coverage": "jest --verbose --coverage"
   },
@@ -41,14 +42,13 @@
     "enzyme-to-json": "^3.4.4",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "faker": "^4.1.0",
     "jest": "^26.0.1",
-    "puppeteer": "^3.0.2",
+    "nodemon": "^2.0.4",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
